Cambios Finales de Stage 1 de la Pagina (Lista para Branching y Mejoras Visuales)

--- a/src/hbs/partials/header.hbs
+++ b/src/hbs/partials/header.hbs
@@ -1,23 +1,26 @@
 <header class="header">
-    <div class="container">
-        <div style="display: flex; justify-content: space-between; align-items: center;">
-            <a href="/">
-                <img src="/logo-autoknls.png" alt="AutoKNLS" class="logo">
-            </a>
-            <nav class="nav">
-                <a href="/">Inicio</a>
-                <a href="/ubicaciones.html">Ubicaciones</a>
-                <a href="/promociones.html">Promociones</a>
-                <a href="/repuestos.html">Repuestos</a>
-                <a href="/accesorios.html">Accesorios</a>
-                <a href="/nosotros.html">Nosotros</a>
-                <a href="/historia.html">Historia</a>
-                <a href="/compromiso.html">Compromiso</a>
-                <a href="/noticias.html">Noticias</a>
-                <a href="/blog.html">Blog</a>
-                <a href="/aplicacion.html">Trabaja con Nosotros</a>
-                <a href="/faq.html">FAQ</a>
-            </nav>
-        </div>
+    <div style="display: flex; justify-content: space-between; align-items: center; max-width: 1280px; margin: 0 auto; padding: 0 1.5rem; width: 100%;">
+        <a href="/" style="flex-shrink: 0; display: flex; align-items: center;">
+            <img src="/logo-autoknls.png" alt="AutoKNLS" class="logo">
+        </a>
+        <nav class="nav">
+            <a href="/">Inicio</a>
+            <a href="/ubicaciones.html">Ubicaciones</a>
+            <a href="/repuestos.html">Repuestos</a>
+            <a href="/noticias.html">Noticias</a>
+            <div class="menu-dropdown">
+                <button class="menu-toggle">Más ▼</button>
+                <ul class="menu-items">
+                    <li><a href="/promociones.html">Promociones</a></li>
+                    <li><a href="/accesorios.html">Accesorios</a></li>
+                    <li><a href="/nosotros.html">Nosotros</a></li>
+                    <li><a href="/historia.html">Historia</a></li>
+                    <li><a href="/compromiso.html">Compromiso</a></li>
+                    <li><a href="/blog.html">Blog</a></li>
+                    <li><a href="/aplicacion.html">Trabaja con Nosotros</a></li>
+                    <li><a href="/faq.html">FAQ</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
 </header>
