--- a/less/sections/noticias.less
+++ b/less/sections/noticias.less
@@ -7,8 +7,7 @@
     gap: @spacing-lg;
     padding: @spacing-lg 0;
 
-    
-    @media (min-width: @breakpoint-desktop) {
+    @media (min-width: @breakpoint-desktop) { 
         .post-list {
             flex: 3;
         }
@@ -22,7 +21,7 @@
     display: flex;
     align-items: center;
     margin-bottom: @spacing-md;
-    border-bottom: 1px solid @color-secondary-200;
+    border-bottom: 1px solid @secondary-200;
     padding-bottom: @spacing-md;
     
     .post-image {
@@ -40,27 +39,29 @@
     }
 
     .post-meta {
-        color: @color-secondary-500;
+        color: @secondary-500;
         font-size: 0.9rem;
-        margin-bottom: @spacing-sm;
+        margin-bottom: @spacing-xs;
     }
     
     .post-title {
-        color: @color-secondary-900; 
+        color: @secondary-900; 
         font-size: 1.8rem;
         margin: 0 0 @spacing-sm 0;
     }
 
     .post-summary {
-        color: @color-secondary-600;
+        color: @secondary-600;
         margin-bottom: @spacing-md;
     }
     
     .read-more {
-        .btn-link();
-
+        color: @primary-500;
+        text-decoration: none;
+        font-weight: bold;
+        
         &:hover {
-            color: @color-primary;
+            color: @primary-700;
             text-decoration: underline;
         }
     }
@@ -68,13 +69,13 @@
 
 .sidebar {
     padding: @spacing-md;
-    background-color: @color-secondary-50;
+    background-color: @secondary-50;
     border-radius: 8px;
     height: fit-content;
     
     .sidebar-title {
-        color: @color-secondary-700;
-        border-bottom: 2px solid @color-secondary-200;
+        color: @secondary-700;
+        border-bottom: 2px solid @secondary-200;
         padding-bottom: @spacing-sm;
         margin-top: 0;
         margin-bottom: @spacing-md;
@@ -87,9 +88,9 @@
         li {
             margin-bottom: @spacing-sm;
             a {
-                color: @color-secondary-600;
+                color: @secondary-600;
                 &:hover {
-                    color: @color-primary;
+                    color: @primary-500;
                 }
             }
         }
@@ -97,14 +98,14 @@
     
     .promo-callout {
         margin-top: @spacing-lg;
-        background-color: @color-primary-100;
+        background-color: @primary-100; 
         padding: @spacing-md;
         border-radius: 4px;
         text-align: center;
         
         .sidebar-title {
             border-bottom: none;
-            color: @color-secondary-900;
+            color: @secondary-900;
         }
     }
 }
