--- a/less/style.less
+++ b/less/style.less
@@ -302,3 +302,6 @@ section {
 
 @import './sections/promociones.less';
 @import './sections/noticias.less';
+@import './sections/faq.less';
+@import './sections/nosotros.less';
+
