--- a/less/sections/promociones.less
+++ b/less/sections/promociones.less
@@ -59,7 +59,7 @@
 .discount-tag {
     display: inline-block;
     background-color: @primary-500; 
-    color: #ffffff;
+    color: @color-white;
     padding: 5px 10px;
     border-radius: 4px;
     font-weight: bold;
