--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,4 @@
 /* Global styles are in LESS - see less/style.less */
+
+/* This CSS file is intentionally left blank */
+/* It serves as a placeholder for any future CSS overrides or additions */
