--- a/less/sections/faq.less
+++ b/less/sections/faq.less
@@ -1,5 +1,3 @@
-@import '../variables.less';
-
 .faq {
   padding: @spacing-xl 0;
   background-color: @color-background;
@@ -26,7 +24,7 @@
   }
 
   &__item {
-    background: #f5f5f5;
+    background: @color-background;
     padding: 1.5rem;
     border-radius: 8px;
     border-left: 4px solid @color-primary;
@@ -34,7 +32,7 @@
     transition: all 0.3s ease;
 
     &:hover {
-      background: lighten(#f5f5f5, 5%);
+      background: lighten(@color-background, 5%);
       transform: translateY(-2px);
     }
 
