--- a/less/variables.less
+++ b/less/variables.less
@@ -25,6 +25,8 @@
 @color-text: @secondary-900;
 @color-text-light: @secondary-600;
 @color-background: @secondary-50;
+@color-white: #ffffff;
+@color-border: @secondary-200;
 
 @font-family-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
 @font-size-base: 16px;
