--- a/src/hbs/partials/footer.hbs
+++ b/src/hbs/partials/footer.hbs
@@ -1,13 +1,13 @@
 <footer class="footer">
-    <div style="max-width: 1280px; margin: 0 auto; padding: 0 1.5rem; width: 100%;">
+    <div class="footer-inner">
         <div class="footer-grid">
             <div>
-                <h3 style="margin-bottom: 1rem;">AutoKNLS</h3>
+                <h3>AutoKNLS</h3>
                 <p>Tu socio confiable en repuestos y accesorios automotrices.</p>
             </div>
             <div>
-                <h4 style="margin-bottom: 1rem;">Enlaces Rápidos</h4>
-                <ul style="list-style: none;">
+                <h4>Enlaces Rápidos</h4>
+                <ul>
                     <li><a href="/ubicaciones.html">Ubicaciones</a></li>
                     <li><a href="/promociones.html">Promociones</a></li>
                     <li><a href="/repuestos.html">Repuestos</a></li>
@@ -15,8 +15,8 @@
                 </ul>
             </div>
             <div>
-                <h4 style="margin-bottom: 1rem;">Empresa</h4>
-                <ul style="list-style: none;">
+                <h4>Empresa</h4>
+                <ul>
                     <li><a href="/nosotros.html">Nosotros</a></li>
                     <li><a href="/historia.html">Historia</a></li>
                     <li><a href="/compromiso.html">Compromiso</a></li>
@@ -24,8 +24,8 @@
                 </ul>
             </div>
             <div>
-                <h4 style="margin-bottom: 1rem;">Soporte</h4>
-                <ul style="list-style: none;">
+                <h4>Soporte</h4>
+                <ul>
                     <li><a href="/noticias.html">Noticias</a></li>
                     <li><a href="/blog.html">Blog</a></li>
                     <li><a href="/faq.html">FAQ</a></li>
