--- a/src/hbs/partials/header.hbs
+++ b/src/hbs/partials/header.hbs
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header-container">
-        <a href="/" class="header-logo">
+        <a href="./" class="header-logo">
             <img src="/logo-autoknls.png" alt="AutoKNLS" class="logo">
         </a>
         
@@ -13,22 +13,22 @@
         
         <!-- Navegación -->
         <nav class="nav" id="navMenu">
-            <a href="/" class="nav-link">Inicio</a>
-            <a href="/ubicaciones.html" class="nav-link">Ubicaciones</a>
-            <a href="/repuestos.html" class="nav-link">Repuestos</a>
-            <a href="/noticias.html" class="nav-link">Noticias</a>
+            <a href="./" class="nav-link">Inicio</a>
+            <a href="./ubicaciones.html" class="nav-link">Ubicaciones</a>
+            <a href="./repuestos.html" class="nav-link">Repuestos</a>
+            <a href="./noticias.html" class="nav-link">Noticias</a>
             
             <div class="menu-dropdown">
                 <button class="menu-toggle" id="moreBtn">Más ▼</button>
                 <ul class="menu-items" id="moreMenu">
-                    <li><a href="/promociones.html">Promociones</a></li>
-                    <li><a href="/accesorios.html">Accesorios</a></li>
-                    <li><a href="/nosotros.html">Nosotros</a></li>
-                    <li><a href="/historia.html">Historia</a></li>
-                    <li><a href="/compromiso.html">Compromiso</a></li>
-                    <li><a href="/blog.html">Blog</a></li>
-                    <li><a href="/aplicacion.html">Trabaja con Nosotros</a></li>
-                    <li><a href="/faq.html">FAQ</a></li>
+                    <li><a href="./promociones.html">Promociones</a></li>
+                    <li><a href="./accesorios.html">Accesorios</a></li>
+                    <li><a href="./nosotros.html">Nosotros</a></li>
+                    <li><a href="./historia.html">Historia</a></li>
+                    <li><a href="./compromiso.html">Compromiso</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./aplicacion.html">Trabaja con Nosotros</a></li>
+                    <li><a href="./faq.html">FAQ</a></li>
                 </ul>
             </div>
         </nav>
