--- a/src/hbs/partials/footer.hbs
+++ b/src/hbs/partials/footer.hbs
@@ -8,27 +8,27 @@
             <div>
                 <h4>Enlaces Rápidos</h4>
                 <ul>
-                    <li><a href="/ubicaciones.html">Ubicaciones</a></li>
-                    <li><a href="/promociones.html">Promociones</a></li>
-                    <li><a href="/repuestos.html">Repuestos</a></li>
-                    <li><a href="/accesorios.html">Accesorios</a></li>
+                    <li><a href="./ubicaciones.html">Ubicaciones</a></li>
+                    <li><a href="./promociones.html">Promociones</a></li>
+                    <li><a href="./repuestos.html">Repuestos</a></li>
+                    <li><a href="./accesorios.html">Accesorios</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Empresa</h4>
                 <ul>
-                    <li><a href="/nosotros.html">Nosotros</a></li>
-                    <li><a href="/historia.html">Historia</a></li>
-                    <li><a href="/compromiso.html">Compromiso</a></li>
-                    <li><a href="/aplicacion.html">Trabaja con Nosotros</a></li>
+                    <li><a href="./nosotros.html">Nosotros</a></li>
+                    <li><a href="./historia.html">Historia</a></li>
+                    <li><a href="./compromiso.html">Compromiso</a></li>
+                    <li><a href="./aplicacion.html">Trabaja con Nosotros</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Soporte</h4>
                 <ul>
-                    <li><a href="/noticias.html">Noticias</a></li>
-                    <li><a href="/blog.html">Blog</a></li>
-                    <li><a href="/faq.html">FAQ</a></li>
+                    <li><a href="./noticias.html">Noticias</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./faq.html">FAQ</a></li>
                 </ul>
             </div>
         </div>
