--- a/src/hbs/partials/footer.hbs
+++ b/src/hbs/partials/footer.hbs
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; {{year}} AutoKNLS. Todos los derechos reservados.</p>
+            <p>&copy; {{currYear}} {{footerbottom}}</p>
         </div>
     </div>
 </footer>
